# RISC-for-Egde-computing-

./: CMakeLists.txt  LICENSE  main.c
include/: bus.h  cpu.h  dram.h  opcodes.h
src/: bus.c  cpu.c  dram.c
